Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanTextObjField.quorum
class Main
    Text v
    v:SetValue(text)
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
